--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -13,6 +13,7 @@ quantization = { path = "../quantization" }
 rkm = "0.8.1"
 rand = "0.8.5"
 
+permutation_iterator = "0.1.2"
 hdf5 = "0.8.1"
 ndarray = "0.15"
 reqwest = { version = "0.11.13", features = ["blocking"] }
