--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -12,6 +12,9 @@ rand = "0.8.5"
 cc = "1.0"
 
 [dependencies]
+serde = { version = "~1.0", features = ["derive"] }
+serde_json = "~1.0"
+atomicwrites = "0.3.1"
 
 [[bench]]
 name = "encode"
