--- a/.github/workflows/rust-lint.yml
+++ b/.github/workflows/rust-lint.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install hdf5 lib
+      run: apt install libhdf5-dev
     - name: Install minimal stable
       uses: actions-rs/toolchain@v1
       with:
