--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dev-dependencies]
+criterion = "0.4"
 rand = "0.8.5"
 
 [build-dependencies]
@@ -13,3 +14,8 @@ cc = "1.0"
 serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 permutation_iterator = "0.1.2"
+
+
+[[bench]]
+name = "pq"
+harness = false
