--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 permutation_iterator = "0.1.2"
 rand = "0.8.5"
+#image = "0.24.5"
