--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -3,6 +3,9 @@ name = "quantization"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+dump_image = ["dep:image"]
+
 [build-dependencies]
 cc = "1.0"
 
@@ -11,4 +14,4 @@ serde = { version = "~1.0", features = ["derive"] }
 serde_json = "~1.0"
 permutation_iterator = "0.1.2"
 rand = "0.8.5"
-image = "0.24.5"
+image = { version = "0.24.5", optional = true }
