--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.11.13", features = ["blocking"] }
 indicatif = "0.17.2"
 permutation_iterator = "0.1.2"
 clap = { version = "4.1.1", features = ["derive"] }
+num_cpus = "1.15.0"
 
 [[bin]]
 name = "basic"
