--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "~1.0"
 permutation_iterator = "0.1.2"
 rand = "0.8.5"
 image = { version = "0.24.5", optional = true }
+rayon = "1.7.0"
