--- a/quantization/Cargo.toml
+++ b/quantization/Cargo.toml
@@ -2,7 +2,7 @@
 name = "quantization"
 version = "0.1.0"
 authors = [
-    "Ivan Pleshkov <pleshkov.ivan@gmail.com>",
+    "Ivan Pleshkov <ivan.pleshkov@qdrant.tech>",
     "Qdrant Team <info@qdrant.tech>",
 ]
 license = "Apache-2.0"
